--- a/wsEjemplo/Web.config
+++ b/wsEjemplo/Web.config
@@ -2,14 +2,14 @@
 <configuration>
 
   <connectionStrings>
-    <add name="ELAVON_TESTConnectionString" connectionString="Data Source=192.168.5.50;Initial Catalog=ELAVON-TEST;User ID=sa;Password=Sgs2018*"
-      providerName="System.Data.SqlClient" />
+    <add name="ELAVON_TESTConnectionString" connectionString="Data Source=192.168.100.56;Initial Catalog=ELAVON-TEST;User ID=sa;Password=b4ckl45h;"
+      providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
-    <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
+    <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true"/>
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.7.2" />
+    <compilation debug="true" targetFramework="4.7.2"/>
     <httpRuntime targetFramework="4.7.2"/>
   </system.web>
   <system.serviceModel>
@@ -24,9 +24,9 @@
       </serviceBehaviors>
     </behaviors>
     <protocolMapping>
-        <add binding="basicHttpsBinding" scheme="https" />
+        <add binding="basicHttpsBinding" scheme="https"/>
     </protocolMapping>    
-    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
+    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true"/>
   </system.serviceModel>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true"/>
@@ -36,5 +36,15 @@
       -->
     <directoryBrowse enabled="true"/>
   </system.webServer>
+  <system.codedom>
+    <compilers>
+      <compiler language="c#;cs;csharp" extension=".cs"
+        type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
+        warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701"/>
+      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb"
+        type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
+        warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
+    </compilers>
+  </system.codedom>
 
 </configuration>
