Se agrega mensaje para Estado que no coincida con cp. Y se agrego el campo TIPO_A_B

--- a/wsEjemplo/wsEjemplo.csproj
+++ b/wsEjemplo/wsEjemplo.csproj
@@ -72,6 +72,9 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataClassesElvon.cs">
+      <DependentUpon>DataClassesElvon.dbml</DependentUpon>
+    </Compile>
     <Compile Include="DataClassesElvon.designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
