--- a/wsEjemplo/wsEjemplo.csproj
+++ b/wsEjemplo/wsEjemplo.csproj
@@ -82,6 +82,7 @@
     </Compile>
     <Compile Include="DataContracts\BD_ARS\addODTRequest.cs" />
     <Compile Include="DataContracts\BD_ARS\confirmarODTRequest.cs" />
+    <Compile Include="DataContracts\BD_ARS\getOdtReplicaRequest.cs" />
     <Compile Include="Helpers\Inserts.cs" />
     <Compile Include="Helpers\Procedures.cs" />
     <Compile Include="Helpers\Respuesta.cs" />
