--- a/wsEjemplo/wsEjemplo.csproj
+++ b/wsEjemplo/wsEjemplo.csproj
@@ -69,6 +69,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Service1.svc" />
+    <Content Include="ServiceJSON.svc" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -87,6 +88,7 @@
     <Compile Include="Helpers\Procedures.cs" />
     <Compile Include="Helpers\Respuesta.cs" />
     <Compile Include="Helpers\Updates.cs" />
+    <Compile Include="IServiceJSON.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
@@ -97,6 +99,9 @@
     </Compile>
     <Compile Include="IService1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServiceJSON.svc.cs">
+      <DependentUpon>ServiceJSON.svc</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
