Se realiza modicacion para regresar la replicas en formato json

--- a/wsEjemplo/Web.config
+++ b/wsEjemplo/Web.config
@@ -3,7 +3,9 @@
 
   <connectionStrings>
     <add name="ELAVON_TESTConnectionString" connectionString="Data Source=192.168.100.56;Initial Catalog=ELAVON;User ID=sa;Password=b4ckl45h;"
-      providerName="System.Data.SqlClient"/>
+      providerName="System.Data.SqlClient" />
+    <add name="ELAVON_TESTConnectionString1" connectionString="Data Source=192.168.100.56;Initial Catalog=ELAVON-TEST;User ID=sa;Password=b4ckl45h"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true"/>
