--- a/wsEjemplo/Web.config
+++ b/wsEjemplo/Web.config
@@ -1,13 +1,15 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 
   <connectionStrings>
     <add name="ELAVON_TESTConnectionString" connectionString="Data Source=192.168.100.56;Initial Catalog=ELAVON-TEST;User ID=sa;Password=b4ckl45h;"
-      providerName="System.Data.SqlClient"/>
-    <add name="ELAVON_TESTConnectionString1" connectionString="Data Source=192.168.100.56;Initial Catalog=ELAVON-TEST;User ID=sa;Password=b4ckl45h"
-      providerName="System.Data.SqlClient"/>
-    <add name="ELAVONConnectionString" connectionString="Data Source=192.168.100.56;Initial Catalog=ELAVON;User ID=sa;Password=b4ckl45h"
-      providerName="System.Data.SqlClient"/>
+      providerName="System.Data.SqlClient" />
+    <add name="ELAVON_TESTConnectionString1" connectionString="Data Source=192.168.100.56;Initial Catalog=ELAVON;User ID=sa;Password=b4ckl45h"
+      providerName="System.Data.SqlClient" />
+    <add name="ELAVONConnectionString" connectionString="Data Source=192.168.100.56;Initial Catalog=ELAVON-TEST;User ID=sa;Password=b4ckl45h"
+      providerName="System.Data.SqlClient" />
+    <add name="ELAVONConnectionString1" connectionString="Data Source=192.168.100.56;Initial Catalog=ELAVON;User ID=sa;Password=b4ckl45h"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true"/>
